Add change informartion on view click

--- a/src/app/modules/app-user/account/basic-user-information/basic-user-information.component.html
+++ b/src/app/modules/app-user/account/basic-user-information/basic-user-information.component.html
@@ -29,6 +29,6 @@
     </mat-form-field>
     <div class="toTheright">
         <a href="">Change Password</a>
-        <button type="submit" mat-raised-button *ngIf="this.role == 'PASSENGER'">Save changes</button>
+        <button type="submit" mat-raised-button>Save changes</button>
     </div>
 </form>
