--- a/src/app/modules/app-user/account/driver-user-info/driver-user-info.component.html
+++ b/src/app/modules/app-user/account/driver-user-info/driver-user-info.component.html
@@ -3,6 +3,6 @@
     <div class="flex-elem2">
         <app-driver-vechicle></app-driver-vechicle>
         <app-driver-documents></app-driver-documents>
-        <button mat-button (click)="sendChangeRequest()">Save All Changes</button>
+        <button mat-button (click)="sendChangeRequest()">Send Change Request</button>
     </div>
 </div>
