--- a/src/app/modules/app-user/account/driver-vechicle/driver-vechicle.component.html
+++ b/src/app/modules/app-user/account/driver-vechicle/driver-vechicle.component.html
@@ -28,7 +28,7 @@
         <p>Average mark: 4.5<mat-icon>star</mat-icon></p>
         <mat-checkbox labelPosition="before" [checked]="vehicle.babyTransport" class="oneLine">Baby seat available</mat-checkbox>
         <mat-checkbox labelPosition="before" [checked]="vehicle.petTransport" class="oneLine">Pets allowed</mat-checkbox>
-        
+        <button mat-raised-button onclick="submitChanges">Save changes</button>
     </div>
     
     
