--- a/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.css
+++ b/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.css
@@ -34,12 +34,13 @@
 button {
     width: 100%;
     text-align: left;
-    font-size: 4vh;
-    padding-left: 0%;
+    font-size: 3.5vh;
+    padding-left: 10px;
     margin-top: 5vh;
-    margin-left: 3vw;
     padding-top: 5px;
     padding-bottom: 5px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: rgb(248, 248, 248) ;
   }
 
   
@@ -50,7 +51,18 @@ button {
 
   mat-icon{
     margin-left: 2vh;
+    margin-right: 1vh;
+    padding-bottom: .5vh;
+    font-size: 3.5vh;
   }
+
+.small-button {
+    text-align: center;
+    font-size: 3vh;
+    letter-spacing: 0.2em;
+    line-height: 4.5vh;
+
+}
 
 #block-button, #unblock-button {
     background-color: #f44122;
@@ -58,8 +70,12 @@ button {
     text-align: center;
     margin-bottom: 8vh;
     font-size: 3vh;
-    width: 15vw;
-    padding-left: 1vw;
+    width: 20vw;
+}
+
+#notes-button {
+    background-color: rgb(242, 242, 242);
+    color: black;
 }
 
 ::ng-deep.mat-form-field-disabled {
