--- a/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.html
+++ b/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.html
@@ -1,6 +1,7 @@
 <div class="flex-container app-page">
     <app-basic-user-information class="flex-elem"></app-basic-user-information>
     <div class="flex-elem2">
+        <button (click)="openNoteDialog()" mat-button> <mat-icon>notes</mat-icon> VIEW NOTES</button>
         <button *ngIf="!isBlocked" id="block-button" (click)="onBlockClick()" mat-button>Block</button>
         <button *ngIf="isBlocked" id="unblock-button" (click)="onUnblockClick()" mat-button>Unblock</button>
 
