--- a/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.css
+++ b/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.css
@@ -34,7 +34,7 @@
 button {
     width: 100%;
     text-align: left;
-    font-size: 3.5vh;
+    font-size: 3.25vh;
     padding-left: 10px;
     margin-top: 5vh;
     padding-top: 5px;
@@ -68,14 +68,19 @@ button {
     background-color: #f44122;
     color: white;
     text-align: center;
-    margin-bottom: 8vh;
+    margin-bottom: 3vh;
     font-size: 3vh;
+    margin-top: 3vh;
     width: 20vw;
 }
 
 #notes-button {
     background-color: rgb(242, 242, 242);
     color: black;
+}
+
+#ride-history-button {
+    margin-bottom: 6vh;
 }
 
 ::ng-deep.mat-form-field-disabled {
