--- a/src/app/modules/app-user/manage-passengers/notes/notes.component.html
+++ b/src/app/modules/app-user/manage-passengers/notes/notes.component.html
@@ -6,6 +6,16 @@
     <div id="note-history">
         <h2>Note history</h2>
         <mat-divider></mat-divider>
+        <div class="grid">
+            <div *ngFor="let note of notes">
+                <mat-card>
+                    <mat-card-content>
+                        <p id="note-date">{{note?.date}}</p>
+                        <p id="note-message">{{note?.message}}</p>
+                    </mat-card-content>
+                  </mat-card>
+            </div>
+        </div>
     </div>
 
 </div>
