--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -18,5 +18,7 @@
         <button type="submit" mat-raised-button>Log in</button>
     </form>
    <a routerLink="/register-account" routerLinkActive="active">DON'T HAVE AN ACCOUNT? REGISTER NOW.</a>
+   <br><br>
+   <a (click)="openResetPasswordDialog()" class="forgot-password">Forgot password?</a>
    <!--<button class="btn btn-primary" (click)="goToRegister()">DON'T HAVE AN ACCOUNT? REGISTER NOW.</button>-->
 </div>
