Add alert and activation flag changing

--- a/src/app/modules/ride/book-ride/book-ride.component.html
+++ b/src/app/modules/ride/book-ride/book-ride.component.html
@@ -71,7 +71,7 @@
       </div>
 
       <button mat-button id="inv-btn" (click)="invite()">Invite friends</button>
-      <button mat-button id="book-btn">BOOK</button>
+      <button mat-button id="book-btn" (click)="bookRide()">BOOK</button>
     </div>
   </div>
 
