--- a/src/app/modules/ride/ride-history/ride-history.component.html
+++ b/src/app/modules/ride/ride-history/ride-history.component.html
@@ -40,7 +40,7 @@
         [length]="length"
         [pageIndex]="currentPage"
         [pageSize]="pageSize"
-        [pageSizeOptions]="[10, 25, 50]"
+        [pageSizeOptions]="[1, 2, 10, 25, 50]"
         showFirstLastButtons
         (page)="handlePage($event)"
     ></mat-paginator>
