--- a/src/app/modules/ride/ride-history/ride-history.component.html
+++ b/src/app/modules/ride/ride-history/ride-history.component.html
@@ -7,6 +7,7 @@
         [dataSource]="dataSource"
         class="mat-elevation-z8"
         matSort
+        *ngIf="rides"
     >
 
         <ng-container matColumnDef="departure">
