--- a/src/app/modules/ride/book-ride/book-ride.component.html
+++ b/src/app/modules/ride/book-ride/book-ride.component.html
@@ -66,7 +66,7 @@
         <div></div>
         <mat-form-field appearance="outline" class="select-and-date">
           <mat-label>Book time</mat-label>
-          <input matInput type="datetime-local" placeholder="Book time">
+          <input matInput type="datetime-local" placeholder="Book time" [ngModel]="filterDateFrom | date:'yyyy-MM-dd HH:mm'" (ngModelChange)="filterDateFrom = $event">
         </mat-form-field>
       </div>
 
