--- a/src/app/modules/layout/toolbar/toolbar.component.html
+++ b/src/app/modules/layout/toolbar/toolbar.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar class="toolbar_color">
   <!--<span class="white-text">UBER</span>-->
-  <button mat-button class="white-text bigger-text" [routerLink]="['/']">
+  <button mat-button class="white-text bigger-text" [routerLink]="['/']" *ngIf="this.user.role == undefined">
+    UBER - {{this.user.id + ": " + this.user.email + " - " + this.user.role}}
+  </button>
+  <button mat-button class="white-text bigger-text" [routerLink]="['/book-ride']" *ngIf="this.user.role != ''">
     UBER - {{this.user.id + ": " + this.user.email + " - " + this.user.role}}
   </button> 
   <span class="example-spacer"></span>
