Fix minor bugs in current ride

--- a/src/app/modules/ride/current-ride/current-ride.component.html
+++ b/src/app/modules/ride/current-ride/current-ride.component.html
@@ -20,7 +20,7 @@
             <p class="app-ride-details"> <mat-icon>location_searching</mat-icon> Destination: {{ride.locations[0].destination.address}}</p>
             <p class="app-ride-details"> Time Elapsed: {{time_elapsed}}min </p>
             <p> Estimated {{ride.estimatedTimeInMinutes - time_elapsed}} minutes left </p>
-            <p class="app-ride-details"> Kilometers travelled: {{kilometers_travelled}} </p>
+            <p class="app-ride-details"> Kilometers travelled: {{kilometers_travelled}}km </p>
 
         </div>
         <div class="app-ride-details-col-right">
