--- a/src/app/modules/app-user/manage-change-request/manage-change-request.component.html
+++ b/src/app/modules/app-user/manage-change-request/manage-change-request.component.html
@@ -10,7 +10,7 @@
                         <mat-card-subtitle>requested: {{request.date}}</mat-card-subtitle>
                     </div>
                     <div class="app-reg-col-pic">
-                        <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+                        <img mat-card-sm-image src={{request.userDTO.profilePicture}} >
                     </div>
                   
                 </mat-card-header>
