--- a/src/app/modules/ride/current-ride/current-ride.component.html
+++ b/src/app/modules/ride/current-ride/current-ride.component.html
@@ -1,40 +1,58 @@
 <div class="app-ride-page"> 
 
+    <div *ngIf="status==''">
+        <h1>No ride currently in progress.</h1>
+        <h2 *ngIf="userRole=='PASSENGER'">Go to <a href="book-ride">Booking page</a> and get yourself a ride.</h2>
+    </div>
+    <div *ngIf="status!=''">
+        <div class="app-ride-col-middle">
+            <h2> Currently {{status}} ride <mat-icon>directions_car</mat-icon></h2>
+            <p class="smaller" *ngIf="(status=='accepted' || status=='pending') && userRole=='PASSENGER'"><i>Waiting for driver...</i></p>
+            <p class="app-ride-details"> <mat-icon>location_on</mat-icon> From departure address: {{ride.locations[0].departure.address}}</p>
+            <div class="app-ride-map-container">
+                <app-map></app-map>
+            </div>
+        </div>
     
-    <div class="app-ride-col-middle">
-        <h2 *ngIf="ride.id != 0"> Currently {{status}} ride <mat-icon>directions_car</mat-icon></h2>
-        <p class="app-ride-details" *ngIf="ride.id != 0"> <mat-icon>location_on</mat-icon> From departure address: {{ride.locations[0].departure.address}}</p>
-        <div class="app-ride-map-container">
-            <app-map></app-map>
-        </div>
-    </div>
-
-    <div class="app-ride-col-middle app-ride-details" *ngIf="ride.id != 0">
-        
-        <div class="app-ride-details-panic">
-            <button *ngIf="status=='active'" mat-button id="panic-ride-btn" mat-raised-button (click)="panicRide()">PANIC</button>
-
-        </div>
-
-        <div class="app-ride-details-col-left">
+        <div class="app-ride-col-middle app-ride-details" *ngIf="status!=''">
+            
+            <div class="app-ride-details-panic">
+                <button *ngIf="status=='active'" mat-button id="panic-ride-btn" mat-raised-button (click)="panicRide()">PANIC</button>
+    
+            </div>
+    
             <p class="app-ride-details"> <mat-icon>location_searching</mat-icon> Destination: {{ride.locations[0].destination.address}}</p>
-            <p class="app-ride-details"> Time Elapsed: {{time_elapsed}}min </p>
-            <p *ngIf="ride.estimatedTimeInMinutes != undefined"> Estimated {{ride.estimatedTimeInMinutes - time_elapsed}} minutes left </p>
-            <p class="app-ride-details"> Kilometers travelled: {{kilometers_travelled}}km </p>
+            <div class="app-ride-details-col-left" *ngIf="status!='active'"> 
+                <p class="app-ride-details">Estimated cost:</p>
+            </div>
 
+            <div class="app-ride-details-col-left" *ngIf="status=='active'">
+                <p class="app-ride-details"> Time Elapsed: {{time_elapsed}}min </p>
+                <p *ngIf="ride.estimatedTimeInMinutes != undefined"> Estimated {{ride.estimatedTimeInMinutes - time_elapsed}} minutes left </p>
+                <p class="app-ride-details"> Kilometers travelled: {{kilometers_travelled}}km </p>
+            </div>
+            <div class="app-ride-details-col-right">
+                <p class="app-ride-details"> {{ride.totalCost}} RSD</p>
+            </div>
+            <div class="ride-buttons">
+                <div class="app-ride-col-middle">
+                    <div id="cancel-instruction" *ngIf="(status=='accepted' || status=='pending') && userRole=='PASSENGER'">
+                        <p class="smaller"><i>Changed your mind?</i></p>
+                        <p class="smaller">Cancel ride free of any cost<mat-icon>money_off</mat-icon></p>
+                    </div>
+                    <button mat-button *ngIf="status=='pending' && userRole=='DRIVER'" id="accept-ride-btn" mat-raised-button (click)="acceptRide()">ACCEPT RIDE</button>
+                    <button mat-button *ngIf="status=='accepted' && userRole=='DRIVER'" id="start-ride-btn" mat-raised-button (click)="startRide()">START RIDE</button>
+                </div>
+                <div class="app-ride-col-middle">
+                    <button mat-button *ngIf="(status=='accepted' || status=='pending') && userRole=='PASSENGER'" id="cancel-ride-btn" mat-raised-button (click)="withdrawRide()">CANCEL RIDE</button>
+                    <button mat-button *ngIf="(status=='accepted' || status=='pending') && userRole=='DRIVER'" id="cancel-ride-btn" mat-raised-button (click)="cancelRide()">CANCEL RIDE</button>
+                </div>
+                <button mat-button *ngIf="status=='active' && userRole=='DRIVER'" id="end-ride-btn" mat-raised-button (click)="endRide()">END RIDE</button>
+                <button mat-button (click)="showMarkerssss()">Simulate vehicle</button>
+            </div>
         </div>
-        <div class="app-ride-details-col-right">
-            <p class="app-ride-details">{{ride.totalCost}} RSD</p>
-        </div>
-        <div class="app-ride-col-middle">
-            <button mat-button *ngIf="status=='accepted'" id="start-ride-btn" mat-raised-button>START RIDE</button>
-        </div>
-        <div class="app-ride-col-middle">
-            <button mat-button *ngIf="status=='accepted'" id="cancel-ride-btn" mat-raised-button>CANCEL RIDE</button>
-        </div>
-        <button mat-button *ngIf="status=='active'" id="end-ride-btn" mat-raised-button (click)="endRide()">END RIDE</button>
-        <button mat-button (click)="showMarkerssss()">rute</button>
     </div>
+    
 
     
 </div>
