--- a/src/app/modules/layout/toolbar/toolbar.component.html
+++ b/src/app/modules/layout/toolbar/toolbar.component.html
@@ -7,7 +7,7 @@
     UBER - {{this.user.id + ": " + this.user.email + " - " + this.user.role}}
   </button> 
   <span class="example-spacer"></span>
-  <button mat-button class="white-text" routerLink="current-ride" (click)="hideMatBadge()">
+  <button mat-button class="white-text" routerLink="current-ride" (click)="hideMatBadge()" *ngIf="this.user.role=='PASSENGER' || this.user.role=='DRIVER'">
     <mat-icon matBadge="1" matBadgePosition="before" [matBadgeHidden]="badgeHidden">directions_car</mat-icon>
     Ride
   </button>
