Add vehicle pins on map

--- a/src/app/modules/layout/landing-page/landing-page.component.html
+++ b/src/app/modules/layout/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <div class="main-landing">
   <div class="map-container">
     <!-- <img src="assets/map.png" alt="nesto"> -->
-    <app-map></app-map>
+    <app-map [item]=true></app-map>
   </div>
 
   <div class="right-form">
