--- a/src/app/modules/ride/book-ride/book-ride.component.html
+++ b/src/app/modules/ride/book-ride/book-ride.component.html
@@ -2,7 +2,7 @@
   
   <div class="left-part">
     <div class="map-container">
-      <app-map></app-map>
+      <app-map [item]=true></app-map>
     </div>
     <div class="estimated-data">
       <div class="data">
