--- a/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
+++ b/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
@@ -18,7 +18,7 @@
         <mat-divider></mat-divider>
         <div *ngIf="driverForDisplay != undefined">
             <div id="app-ride-driver-picture">
-                <img src="https://images.unsplash.com/photo-1626397859727-6d15fb78d8ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZHJpdmVyfGVufDB8MnwwfHw%3D&auto=format&fit=crop&w=500&q=60"/>
+                <img src="{{driverForDisplay.profilePicture}}"/>
             </div>
             <div id="app-ride-driver-name">
                 <p class="app-ride-attribute">{{driverForDisplay.name}} {{driverForDisplay.surname}}</p>
@@ -34,7 +34,8 @@
         <div *ngFor="let passenger of passengersForDisplay">
             <div>
                 <div id="app-ride-passenger-picture">
-                    <img src="https://images.unsplash.com/photo-1518415692216-ce36b914890f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTR8fHBlcnNvbnxlbnwwfDJ8MHx8&auto=format&fit=crop&w=500&q=60" >
+                    <!-- <img src="https://images.unsplash.com/photo-1518415692216-ce36b914890f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTR8fHBlcnNvbnxlbnwwfDJ8MHx8&auto=format&fit=crop&w=500&q=60" > -->
+                    <img src="{{passenger.profilePicture}}" >
                 </div>
                 <div id="app-ride-passenger-name">
                     <p class="app-ride-attribute">{{passenger.name}} {{passenger.surname}}</p>
