--- a/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
+++ b/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
@@ -34,7 +34,6 @@
         <div *ngFor="let passenger of passengersForDisplay">
             <div>
                 <div id="app-ride-passenger-picture">
-                    <!-- <img src="https://images.unsplash.com/photo-1518415692216-ce36b914890f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTR8fHBlcnNvbnxlbnwwfDJ8MHx8&auto=format&fit=crop&w=500&q=60" > -->
                     <img src="{{passenger.profilePicture}}" >
                 </div>
                 <div id="app-ride-passenger-name">
@@ -44,11 +43,15 @@
                 <div id="app-ride-passenger-reviewbtn">
                     <button mat-button id="btn-show-reviews" (click)="displayReviewsOnClick(passenger.email)">Show reviews</button>
                 </div>
-                <div class="app-ride-review" *ngIf="reviewsShow==true && passenger.email === review.driverReview.passenger.email && review.driverReview.id!=-1">
-                    <p><mat-icon>thumbs_up_down</mat-icon>Passenger gave driver rating <span class="rating">{{review.driverReview.rating}} </span>  and commented:</p>
-                    <p class="app-ride-review-comment"> {{review.driverReview.comment}}</p>
-                    <p><mat-icon>directions_car</mat-icon>Passenger gave the vehicle rating <span class="rating">{{review.vehicleReview.rating}} </span>  and commented:</p>
-                    <p class="app-ride-review-comment"> {{review.vehicleReview.comment}} </p>
+                <div class="app-ride-review" *ngIf="reviewsShow==true && (passenger.email === review.driverReview.passenger.email || passenger.email === review.driverReview.passenger.email) ">
+                    <div *ngIf="review.driverReview != null">
+                        <p><mat-icon>thumbs_up_down</mat-icon>Passenger gave driver rating <span class="rating">{{review.driverReview.rating}} </span>  and commented:</p>
+                        <p class="app-ride-review-comment"> {{review.driverReview.comment}}</p>
+                    </div>
+                    <div *ngIf="review.vehicleReview != null">
+                        <p><mat-icon>directions_car</mat-icon>Passenger gave the vehicle rating <span class="rating">{{review.vehicleReview.rating}} </span>  and commented:</p>
+                        <p class="app-ride-review-comment"> {{review.vehicleReview.comment}} </p>
+                    </div>
                 </div>
             </div>
             </div>
