Add statistics and chat buttons

--- a/src/app/modules/layout/toolbar/toolbar.component.html
+++ b/src/app/modules/layout/toolbar/toolbar.component.html
@@ -23,6 +23,10 @@
     <mat-icon>history</mat-icon>
     Ride history
   </button>
+  <button mat-button class="white-text" routerLink="chat" *ngIf="this.user.role == 'PASSENGER' || this.user.role == 'DRIVER'">
+    <mat-icon>person</mat-icon>
+    Chat
+  </button>
   <button mat-button class="white-text" [matMenuTriggerFor]="menu" *ngIf="this.user.role == 'ADMIN'">Manage accounts</button>
   <mat-menu #menu="matMenu">
     <button mat-button class="manage-menu-btn" routerLink="manage-passengers">
@@ -33,6 +37,12 @@
     </button>
     <button mat-button class="manage-menu-btn" routerLink="manage-change-requests">
       Change requests
+    </button>
+    <button mat-button class="manage-menu-btn" routerLink="statistics">
+      Statistics
+    </button>
+    <button mat-button class="manage-menu-btn" routerLink="chat">
+      Chat
     </button>
   </mat-menu>
   <button mat-button class="white-text" [routerLink]="['/login']" *ngIf="this.user.email == null">
