--- a/src/app/modules/app-user/account/passenger-other-acc-info/passenger-other-acc-info.component.html
+++ b/src/app/modules/app-user/account/passenger-other-acc-info/passenger-other-acc-info.component.html
@@ -2,7 +2,7 @@
     <h2>Paying information<mat-icon>edit</mat-icon></h2>
     <p>Account number: 231*****234</p>
     <p class="bottom-margin">Payment type: paypal</p>
-    <button mat-button [routerLink]="['/login']">
+    <button mat-button [routerLink]="['/statistics']">
         Ride statistics
         <mat-icon>launch</mat-icon>
     </button>
